--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
     <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit officia cum consequatur totam, vero ullam.</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
         Labore, ullam. Illum, ullam nostrum. Repudiandae architecto eum repellat incidunt vel quam.</p>
+    <ul>
+        <li>home</li>
+        <li>contact</li>
+        <li>about</li>
+    </ul>
 </body>
 </html>
